优化图片浏览记录、用户登录